# mozilla-sec-eia

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.rst  dagster.yaml  environment.yml  labeled_data_tracking.csv  pyproject.toml  test_environment.yml  tox.ini  workspace.yaml
.github/workflows/: docker-build-push.yml  release.yml  tox-pytest.yml
docker/: Dockerfile
docker/deployment/: Dockerfile  docker-compose.yml
docker/mlflow/: Dockerfile
docs/: conf.py
labeling-configs/: labeling-config.xml
notebooks/: 01-kl-ex21-table-exploration.ipynb  02-kl-named-entity-recognition.ipynb  03-kl-table-transformer.ipynb  04-kl-layoutlm.ipynb  04-tb-pdf_text_extraction.ipynb  05-kl-fine-tune-layoutlm.ipynb  05-kl-test-fine-tune-layoutlm.ipynb  05-kl-training-data-creation.ipynb  06-kl-main-10k-extraction.ipynb  07-kl-label-studio-json-creation.ipynb  08-kl-debug-pdf-word-parsing.ipynb  08-kl-relation-extraction.ipynb  09-kl-combine-multi-page-pdfs.ipynb  09-kl-debug-multi-page-pdfs.ipynb  10-kl-inference-validation.ipynb  10-kl-layoutlm-inference.ipynb  11-kl-scratch-relation-extraction.ipynb  12-kl-inference-extraction-pipeline-clean.ipynb  13-kl-validation_vs_extraction_comparison.ipynb  14-kl-examine-full-run-outputs.ipynb  15-kl-scratch-paragraph-classifier.ipynb  16-kl-splink-ex21-filer-link.ipynb  17-kl-paragraph-layout-metrics.ipynb  18-kl-splink-sec-eia.ipynb  20-kl-validate-sec-output-table.ipynb  kl-ex21-table-exploration.ipynb  look_at_metadata.ipynb  torotel.html  wisconsin_electric.html
src/mozilla_sec_eia/: __init__.py  assets.py  basic_10k.py  cli.py  create_labeled_dataset.py  extract.py  finetune_ex21_extractor.py  model_jobs.py  pdf_text_extraction_utils.py  pudl_pipelines.py  pudl_validation_pipelines.py  rename_labeled_filings.py  utils.py
src/mozilla_sec_eia/ex_21/: create_labeled_dataset.py  debug.py  extractor.py  finetune_extractor.py  inference.py  rename_labeled_filings.py  train_extractor.py
src/mozilla_sec_eia/models/: __init__.py  schema.py
src/mozilla_sec_eia/models/sec10k/: README.rst  __init__.py  basic_10k.py  entities.py  extract.py  pipeline.py  sec_output_table.py
src/mozilla_sec_eia/models/sec10k/ex_21/: __init__.py  create_labeled_dataset.py  data.py  ex21_validation_helpers.py  inference.py  remove_paragraph_layout_validation_tables.py  rename_labeled_filings.py  train_extractor.py  validation_helpers.py
src/mozilla_sec_eia/models/sec10k/ex_21/data/: __init__.py  common.py  inference.py  training.py
src/mozilla_sec_eia/models/sec10k/notebooks/: exhibit21_extractor.ipynb  exhibit21_inference_model.ipynb  exhibit21_layout_classifier.ipynb  layoutlm.ipynb  train_exhibit21_extraction.ipynb
src/mozilla_sec_eia/models/sec10k/utils/: __init__.py  cloud.py  db_metadata.py  layoutlm.py  pdf.py
src/mozilla_sec_eia/models/sec_eia_record_linkage/: __init__.py  create_eia_input.py  entities.py  preprocessing.py  sec_eia_splink_config.py  sec_output_table.py  transform_eia_input.py  transform_sec_input.py
src/mozilla_sec_eia/models/sec_eia_record_linkage/notebooks/: splink-sec-eia.ipynb
src/mozilla_sec_eia/package_data/: basic_10k_labels.csv  ex21_labels.csv  formDStateCodes.xsd.xml  street_suffix_abbreviations.json
src/mozilla_sec_eia/package_data/training_data/: ex21_labeled_filings.csv
src/mozilla_sec_eia/package_data/validation_data/: ex21_labels.csv  ex21_labels_old.csv  ex21_labels_with_paragraph.csv  ex21_layout_histogram.csv  sec_eia_validation_set.csv
src/mozilla_sec_eia/utils/: cloud.py  layoutlm.py  pdf.py
src/mozilla_sec_eia/utils/ml_tools/: __init__.py  experiment_tracking.py  models.py
terraform/: main.tf
tests/: conftest.py  debug.py  test.env
tests/data/: inference_and_extraction_expected_out.csv
tests/integration/: console_scripts_test.py  ex21_extraction_test.py  extract_test.py  jupyter_notebooks_test.py
tests/integration/models/sec10k/: extract_test.py
tests/unit/: archive_test.py  dummy_test.py  ex21_model_test.py  extract_test.py  utils_test.py
tests/unit/models/sec10k/: ex21_model_test.py  extract_test.py  utils_test.py
